Fetch data and organize Get pitcher appearances data from MLB API. Organize files into folders.

--- a/report.html
+++ b/report.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Christian Hicks">
+<meta name="dcterms.date" content="2025-04-13">
+<meta name="description" content="An analysis of rule changes recent to 2025 Major League Baseball.">
 
 <title>Draft</title>
 <style>
@@ -3062,10 +3064,19 @@ vertical-align: -.125em;
 
 </head>
 
-<body class="fullcontent">
+<body>
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#background" id="toc-background" class="nav-link active" data-scroll-target="#background">Background</a></li>
+  <li><a href="#references" id="toc-references" class="nav-link" data-scroll-target="#references">References</a></li>
+  </ul>
+</nav>
+</div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
@@ -3073,6 +3084,11 @@ vertical-align: -.125em;
 <h1 class="title">Draft</h1>
 </div>
 
+<div>
+  <div class="description">
+    An analysis of rule changes recent to 2025 Major League Baseball.
+  </div>
+</div>
 
 
 <div class="quarto-title-meta">
@@ -3080,11 +3096,23 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Christian Hicks </p>
+             <p><a href="https://github.com/hicks017">Christian Hicks</a> </p>
           </div>
   </div>
     
+    <div>
+    <div class="quarto-title-meta-heading">Published</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date">April 13, 2025</p>
+    </div>
+  </div>
   
+    <div>
+    <div class="quarto-title-meta-heading">Modified</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date-modified">April 17, 2025</p>
+    </div>
+  </div>
     
   </div>
   
@@ -3093,10 +3121,11 @@ vertical-align: -.125em;
 </header>
 
 
-<section id="intro" class="level2">
-<h2 class="anchored" data-anchor-id="intro">Intro</h2>
+<section id="background" class="level2">
+<h2 class="anchored" data-anchor-id="background">Background</h2>
 <p>The year 2020 brought big changes to the world, such as how Major League Baseball (MLB) is played. In fact, the five-year span of 2019-2023 had the largest number of rule changes in any other five-year span of MLB history <span class="citation" data-cites="inc_mlb_nodate">(<a href="#ref-inc_mlb_nodate" role="doc-biblioref">1</a>)</span>. These efforts aimed to reduce the length of games, increase scoring, preserve player safety, and increase viewership. The introduction of the three‑batter minimum for relief pitchers in 2020 sought to remove one‑ and two‑batter “specialist” relievers and thereby reduce the number of pitching changes that prolong games <span class="citation" data-cites="noauthor_these_nodate noauthor_three-batter_nodate noauthor_three-batter_nodate-1">(<a href="#ref-noauthor_these_nodate" role="doc-biblioref">2</a>–<a href="#ref-noauthor_three-batter_nodate-1" role="doc-biblioref">4</a>)</span>. In the same year the league introduced the infamous “Manfred Man”, an extra‑innings runner on second base to promote earlier scoring and shorten games stuck in a stalemate <span class="citation" data-cites="noauthor_designated_nodate noauthor_designated_nodate-3 noauthor_ghost_2023">(<a href="#ref-noauthor_designated_nodate" role="doc-biblioref">5</a>–<a href="#ref-noauthor_ghost_2023" role="doc-biblioref">7</a>)</span>. The universal designated hitter eliminated the pitcher’s plate appearance and intended to boost offensive production <span class="citation" data-cites="noauthor_designated_nodate-1 noauthor_designated_nodate-2 noauthor_new_nodate">(<a href="#ref-noauthor_designated_nodate-1" role="doc-biblioref">8</a>–<a href="#ref-noauthor_new_nodate" role="doc-biblioref">10</a>)</span>.</p>
 <p>In 2022, MLB continued the offensive and safety initiatives. Bases were increased in size from 15″ to 18″ to shorten the distance between bags, with the dual-purpose of encouraging more stolen‑base attempts and reducing dangerous collisions <span class="citation" data-cites="noauthor_base_nodate noauthor_base_nodate-1">(<a href="#ref-noauthor_base_nodate" role="doc-biblioref">11</a>,<a href="#ref-noauthor_base_nodate-1" role="doc-biblioref">12</a>)</span>. Additionally, restrictions on defensive positioning prevented “the shift”, an extreme alignment that countered pull-hitters and reduced their suppressed batting‑average‐on‐balls‐in‐play (BABIP) <span class="citation" data-cites="noauthor_defensive_nodate noauthor_defensive_nodate-1">(<a href="#ref-noauthor_defensive_nodate" role="doc-biblioref">13</a>,<a href="#ref-noauthor_defensive_nodate-1" role="doc-biblioref">14</a>)</span>. Finally, the pitch clock and batter‑box enforcement policy were deployed in 2023 to accelerate the game tempo <span class="citation" data-cites="noauthor_pitch_nodate noauthor_pitch_nodate-1 noauthor_pitch_nodate-2">(<a href="#ref-noauthor_pitch_nodate" role="doc-biblioref">15</a>–<a href="#ref-noauthor_pitch_nodate-2" role="doc-biblioref">17</a>)</span>.</p>
+<p>While each of these rule changes intends to improve the MLB viewing experiences, or protect MLB players, their real-world effects require systematic and independent quantification. This analysis leverages publicly available pitch-by-pitch, play-by-play, and other game day datasets to measure key metrics before and after each rule’s implementation. Comparing metrics with pre- and post-rule windows aims to provide empirical evidence on the efficacy of MLB’s recent innovations and inform future decision-making in professional baseball.</p>
 </section>
 <section id="references" class="level2 unnumbered">
 
