Update background text Reorganize and add new citations.

--- a/report.html
+++ b/report.html
@@ -3110,7 +3110,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Modified</div>
     <div class="quarto-title-meta-contents">
-      <p class="date-modified">April 17, 2025</p>
+      <p class="date-modified">April 28, 2025</p>
     </div>
   </div>
     
@@ -3124,8 +3124,8 @@ vertical-align: -.125em;
 <section id="background" class="level2">
 <h2 class="anchored" data-anchor-id="background">Background</h2>
 <p>The year 2020 brought big changes to the world, such as how Major League Baseball (MLB) is played. In fact, the five-year span of 2019-2023 had the largest number of rule changes in any other five-year span of MLB history <span class="citation" data-cites="inc_mlb_nodate">(<a href="#ref-inc_mlb_nodate" role="doc-biblioref">1</a>)</span>. These efforts aimed to reduce the length of games, increase scoring, preserve player safety, and increase viewership. The introduction of the three‑batter minimum for relief pitchers in 2020 sought to remove one‑ and two‑batter “specialist” relievers and thereby reduce the number of pitching changes that prolong games <span class="citation" data-cites="noauthor_these_nodate noauthor_three-batter_nodate noauthor_three-batter_nodate-1">(<a href="#ref-noauthor_these_nodate" role="doc-biblioref">2</a>–<a href="#ref-noauthor_three-batter_nodate-1" role="doc-biblioref">4</a>)</span>. In the same year the league introduced the infamous “Manfred Man”, an extra‑innings runner on second base to promote earlier scoring and shorten games stuck in a stalemate <span class="citation" data-cites="noauthor_designated_nodate noauthor_designated_nodate-3 noauthor_ghost_2023">(<a href="#ref-noauthor_designated_nodate" role="doc-biblioref">5</a>–<a href="#ref-noauthor_ghost_2023" role="doc-biblioref">7</a>)</span>. The universal designated hitter eliminated the pitcher’s plate appearance and intended to boost offensive production <span class="citation" data-cites="noauthor_designated_nodate-1 noauthor_designated_nodate-2 noauthor_new_nodate">(<a href="#ref-noauthor_designated_nodate-1" role="doc-biblioref">8</a>–<a href="#ref-noauthor_new_nodate" role="doc-biblioref">10</a>)</span>.</p>
-<p>In 2022, MLB continued the offensive and safety initiatives. Bases were increased in size from 15″ to 18″ to shorten the distance between bags, with the dual-purpose of encouraging more stolen‑base attempts and reducing dangerous collisions <span class="citation" data-cites="noauthor_base_nodate noauthor_base_nodate-1">(<a href="#ref-noauthor_base_nodate" role="doc-biblioref">11</a>,<a href="#ref-noauthor_base_nodate-1" role="doc-biblioref">12</a>)</span>. Additionally, restrictions on defensive positioning prevented “the shift”, an extreme alignment that countered pull-hitters and reduced their suppressed batting‑average‐on‐balls‐in‐play (BABIP) <span class="citation" data-cites="noauthor_defensive_nodate noauthor_defensive_nodate-1">(<a href="#ref-noauthor_defensive_nodate" role="doc-biblioref">13</a>,<a href="#ref-noauthor_defensive_nodate-1" role="doc-biblioref">14</a>)</span>. Finally, the pitch clock and batter‑box enforcement policy were deployed in 2023 to accelerate the game tempo <span class="citation" data-cites="noauthor_pitch_nodate noauthor_pitch_nodate-1 noauthor_pitch_nodate-2">(<a href="#ref-noauthor_pitch_nodate" role="doc-biblioref">15</a>–<a href="#ref-noauthor_pitch_nodate-2" role="doc-biblioref">17</a>)</span>.</p>
-<p>While each of these rule changes intends to improve the MLB viewing experiences, or protect MLB players, their real-world effects require systematic and independent quantification. This analysis leverages publicly available pitch-by-pitch, play-by-play, and other game day datasets to measure key metrics before and after each rule’s implementation. Comparing metrics with pre- and post-rule windows aims to provide empirical evidence on the efficacy of MLB’s recent innovations and inform future decision-making in professional baseball.</p>
+<p>In 2023, MLB continued the offensive and safety initiatives. Bases were increased in size from 15″ to 18″ to shorten the distance between bags, with the dual-purpose of encouraging more stolen‑base attempts and reducing dangerous collisions <span class="citation" data-cites="noauthor_base_nodate noauthor_base_nodate-1">(<a href="#ref-noauthor_base_nodate" role="doc-biblioref">11</a>,<a href="#ref-noauthor_base_nodate-1" role="doc-biblioref">12</a>)</span>. The pitch clock and disengagement policy were also deployed to accelerate the game tempo <span class="citation" data-cites="noauthor_pitch_nodate noauthor_pitch_nodate-1 noauthor_pitch_nodate-2 noauthor_balk_nodate schofield_pitch_2023">(<a href="#ref-noauthor_pitch_nodate" role="doc-biblioref">13</a>–<a href="#ref-schofield_pitch_2023" role="doc-biblioref">17</a>)</span>. Finally, restrictions on defensive positioning prevented “the shift”, an extreme alignment that countered pull-hitters and reduced their batting‑average‐on‐balls‐in‐play (BABIP) <span class="citation" data-cites="noauthor_defensive_nodate noauthor_defensive_nodate-1">(<a href="#ref-noauthor_defensive_nodate" role="doc-biblioref">18</a>,<a href="#ref-noauthor_defensive_nodate-1" role="doc-biblioref">19</a>)</span>.</p>
+<p>While each of these rule changes intends to improve the MLB viewing experiences, their real-world effects require systematic and independent quantification. This analysis leverages publicly available pitch-by-pitch, play-by-play, and other game day datasets to measure key metrics before and after each rule’s implementation. Comparing metrics with pre- and post-rule windows aims to provide empirical evidence on the efficacy of MLB’s recent innovations and inform future decision-making in professional baseball.</p>
 </section>
 <section id="references" class="level2 unnumbered">
 
@@ -3169,20 +3169,26 @@ vertical-align: -.125em;
 <div id="ref-noauthor_base_nodate-1" class="csl-entry" role="listitem">
 <div class="csl-left-margin">12. </div><div class="csl-right-inline">Base <span>Sizes</span> (2023 rule change) <span></span> <span>Glossary</span> [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/glossary/rules/base-sizes">https://www.mlb.com/glossary/rules/base-sizes</a></div>
 </div>
-<div id="ref-noauthor_defensive_nodate" class="csl-entry" role="listitem">
-<div class="csl-left-margin">13. </div><div class="csl-right-inline">Defensive shift - <span>BR</span> <span>Bullpen</span> [Internet]. [cited 2025 Apr 14]. Available from: <a href="https://www.baseball-reference.com/bullpen/Defensive_shift">https://www.baseball-reference.com/bullpen/Defensive_shift</a></div>
-</div>
-<div id="ref-noauthor_defensive_nodate-1" class="csl-entry" role="listitem">
-<div class="csl-left-margin">14. </div><div class="csl-right-inline">Defensive <span>Shift</span> <span>Limits</span> (2023 rule change) <span></span> <span>Glossary</span> [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/glossary/rules/defensive-shift-limits">https://www.mlb.com/glossary/rules/defensive-shift-limits</a></div>
-</div>
 <div id="ref-noauthor_pitch_nodate" class="csl-entry" role="listitem">
-<div class="csl-left-margin">15. </div><div class="csl-right-inline">Pitch <span>Timer</span> (2023 rule change) <span></span> <span>Glossary</span> [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/glossary/rules/pitch-timer">https://www.mlb.com/glossary/rules/pitch-timer</a></div>
+<div class="csl-left-margin">13. </div><div class="csl-right-inline">Pitch <span>Timer</span> (2023 rule change) <span></span> <span>Glossary</span> [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/glossary/rules/pitch-timer">https://www.mlb.com/glossary/rules/pitch-timer</a></div>
 </div>
 <div id="ref-noauthor_pitch_nodate-1" class="csl-entry" role="listitem">
-<div class="csl-left-margin">16. </div><div class="csl-right-inline">Pitch clock - <span>BR</span> <span>Bullpen</span> [Internet]. [cited 2025 Apr 14]. Available from: <a href="https://www.baseball-reference.com/bullpen/Pitch_clock">https://www.baseball-reference.com/bullpen/Pitch_clock</a></div>
+<div class="csl-left-margin">14. </div><div class="csl-right-inline">Pitch clock - <span>BR</span> <span>Bullpen</span> [Internet]. [cited 2025 Apr 14]. Available from: <a href="https://www.baseball-reference.com/bullpen/Pitch_clock">https://www.baseball-reference.com/bullpen/Pitch_clock</a></div>
 </div>
 <div id="ref-noauthor_pitch_nodate-2" class="csl-entry" role="listitem">
-<div class="csl-left-margin">17. </div><div class="csl-right-inline">Pitch timer, shift restrictions among announced rule changes for ’23 [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/news/mlb-2023-rule-changes-pitch-timer-larger-bases-shifts">https://www.mlb.com/news/mlb-2023-rule-changes-pitch-timer-larger-bases-shifts</a></div>
+<div class="csl-left-margin">15. </div><div class="csl-right-inline">Pitch timer, shift restrictions among announced rule changes for ’23 [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/news/mlb-2023-rule-changes-pitch-timer-larger-bases-shifts">https://www.mlb.com/news/mlb-2023-rule-changes-pitch-timer-larger-bases-shifts</a></div>
+</div>
+<div id="ref-noauthor_balk_nodate" class="csl-entry" role="listitem">
+<div class="csl-left-margin">16. </div><div class="csl-right-inline">Balk &amp; <span>Disengagement</span> <span>Violation</span> (2023 rule change) <span></span> <span>Glossary</span> [Internet]. MLB.com. [cited 2025 Apr 28]. Available from: <a href="https://www.mlb.com/glossary/rules/balk">https://www.mlb.com/glossary/rules/balk</a></div>
+</div>
+<div id="ref-schofield_pitch_2023" class="csl-entry" role="listitem">
+<div class="csl-left-margin">17. </div><div class="csl-right-inline">Schofield M. Pitch timers, disengagements, and the other new <span>MLB</span> rules, explained [Internet]. SBNation.com. 2023 [cited 2025 Apr 28]. Available from: <a href="https://www.sbnation.com/23601664/mlb-rule-changes-2023-explained">https://www.sbnation.com/23601664/mlb-rule-changes-2023-explained</a></div>
+</div>
+<div id="ref-noauthor_defensive_nodate" class="csl-entry" role="listitem">
+<div class="csl-left-margin">18. </div><div class="csl-right-inline">Defensive shift - <span>BR</span> <span>Bullpen</span> [Internet]. [cited 2025 Apr 14]. Available from: <a href="https://www.baseball-reference.com/bullpen/Defensive_shift">https://www.baseball-reference.com/bullpen/Defensive_shift</a></div>
+</div>
+<div id="ref-noauthor_defensive_nodate-1" class="csl-entry" role="listitem">
+<div class="csl-left-margin">19. </div><div class="csl-right-inline">Defensive <span>Shift</span> <span>Limits</span> (2023 rule change) <span></span> <span>Glossary</span> [Internet]. MLB.com. [cited 2025 Apr 14]. Available from: <a href="https://www.mlb.com/glossary/rules/defensive-shift-limits">https://www.mlb.com/glossary/rules/defensive-shift-limits</a></div>
 </div>
 </div></section></div></main>
 <!-- /main column -->
