--- a/explore data/designated_hitter.html
+++ b/explore data/designated_hitter.html
@@ -8,9 +8,9 @@
 
 <meta name="author" content="Christian Hicks">
 <meta name="dcterms.date" content="2025-05-03">
-<meta name="description" content="Exploratory data analysis of the extra-innings baserunner on second base.">
+<meta name="description" content="Exploratory data analysis of universal designated hitter.">
 
-<title>Extra-innings Baserunner</title>
+<title>Designated Hitter</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3098,12 +3098,12 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Extra-innings Baserunner</h1>
+<h1 class="title">Designated Hitter</h1>
 </div>
 
 <div>
   <div class="description">
-    Exploratory data analysis of the extra-innings baserunner on second base.
+    Exploratory data analysis of universal designated hitter.
   </div>
 </div>
 
