--- a/explore data/play_durations.html
+++ b/explore data/play_durations.html
@@ -3130,7 +3130,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Modified</div>
     <div class="quarto-title-meta-contents">
-      <p class="date-modified">May 6, 2025</p>
+      <p class="date-modified">May 7, 2025</p>
     </div>
   </div>
     
@@ -3640,7 +3640,7 @@ vertical-align: -.125em;
 </section>
 <section id="game-duration" class="level2">
 <h2 class="anchored" data-anchor-id="game-duration">Game duration</h2>
-<p>Note: This is not using game start and end time but rather play time during a game.</p>
+<p>Note: This is not using game start and end time but rather play time during a game. Could be considered “action”.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Prepare data</summary>
