Begin methods writing

--- a/report.html
+++ b/report.html
@@ -3073,6 +3073,7 @@ vertical-align: -.125em;
    
   <ul>
   <li><a href="#background" id="toc-background" class="nav-link active" data-scroll-target="#background">Background</a></li>
+  <li><a href="#methods" id="toc-methods" class="nav-link" data-scroll-target="#methods">Methods</a></li>
   <li><a href="#references" id="toc-references" class="nav-link" data-scroll-target="#references">References</a></li>
   </ul>
 </nav>
@@ -3110,7 +3111,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Modified</div>
     <div class="quarto-title-meta-contents">
-      <p class="date-modified">April 28, 2025</p>
+      <p class="date-modified">May 13, 2025</p>
     </div>
   </div>
     
@@ -3126,6 +3127,9 @@ vertical-align: -.125em;
 <p>The year 2020 brought big changes to the world, such as how Major League Baseball (MLB) is played. In fact, the five-year span of 2019-2023 had the largest number of rule changes in any other five-year span of MLB history <span class="citation" data-cites="inc_mlb_nodate">(<a href="#ref-inc_mlb_nodate" role="doc-biblioref">1</a>)</span>. These efforts aimed to reduce the length of games, increase scoring, preserve player safety, and increase viewership. The introduction of the three‑batter minimum for relief pitchers in 2020 sought to remove one‑ and two‑batter “specialist” relievers and thereby reduce the number of pitching changes that prolong games <span class="citation" data-cites="noauthor_these_nodate noauthor_three-batter_nodate noauthor_three-batter_nodate-1">(<a href="#ref-noauthor_these_nodate" role="doc-biblioref">2</a>–<a href="#ref-noauthor_three-batter_nodate-1" role="doc-biblioref">4</a>)</span>. In the same year the league introduced the infamous “Manfred Man”, an extra‑innings runner on second base to promote earlier scoring and shorten games stuck in a stalemate <span class="citation" data-cites="noauthor_designated_nodate noauthor_designated_nodate-3 noauthor_ghost_2023">(<a href="#ref-noauthor_designated_nodate" role="doc-biblioref">5</a>–<a href="#ref-noauthor_ghost_2023" role="doc-biblioref">7</a>)</span>. The universal designated hitter eliminated the pitcher’s plate appearance and intended to boost offensive production <span class="citation" data-cites="noauthor_designated_nodate-1 noauthor_designated_nodate-2 noauthor_new_nodate">(<a href="#ref-noauthor_designated_nodate-1" role="doc-biblioref">8</a>–<a href="#ref-noauthor_new_nodate" role="doc-biblioref">10</a>)</span>.</p>
 <p>In 2023, MLB continued the offensive and safety initiatives. Bases were increased in size from 15″ to 18″ to shorten the distance between bags, with the dual-purpose of encouraging more stolen‑base attempts and reducing dangerous collisions <span class="citation" data-cites="noauthor_base_nodate noauthor_base_nodate-1">(<a href="#ref-noauthor_base_nodate" role="doc-biblioref">11</a>,<a href="#ref-noauthor_base_nodate-1" role="doc-biblioref">12</a>)</span>. The pitch clock and disengagement policy were also deployed to accelerate the game tempo <span class="citation" data-cites="noauthor_pitch_nodate noauthor_pitch_nodate-1 noauthor_pitch_nodate-2 noauthor_balk_nodate schofield_pitch_2023">(<a href="#ref-noauthor_pitch_nodate" role="doc-biblioref">13</a>–<a href="#ref-schofield_pitch_2023" role="doc-biblioref">17</a>)</span>. Finally, restrictions on defensive positioning prevented “the shift”, an extreme alignment that countered pull-hitters and reduced their batting‑average‐on‐balls‐in‐play (BABIP) <span class="citation" data-cites="noauthor_defensive_nodate noauthor_defensive_nodate-1">(<a href="#ref-noauthor_defensive_nodate" role="doc-biblioref">18</a>,<a href="#ref-noauthor_defensive_nodate-1" role="doc-biblioref">19</a>)</span>.</p>
 <p>While each of these rule changes intends to improve the MLB viewing experiences, their real-world effects require systematic and independent quantification. This analysis leverages publicly available pitch-by-pitch, play-by-play, and other game day datasets to measure key metrics before and after each rule’s implementation. Comparing metrics with pre- and post-rule windows aims to provide empirical evidence on the efficacy of MLB’s recent innovations and inform future decision-making in professional baseball.</p>
+</section>
+<section id="methods" class="level2">
+<h2 class="anchored" data-anchor-id="methods">Methods</h2>
 </section>
 <section id="references" class="level2 unnumbered">
 
