Refine software and data section

--- a/report.html
+++ b/report.html
@@ -3162,17 +3162,9 @@ vertical-align: -.125em;
 <li><p>Pre/post comparisons with two-sample t-tests (not paired because too many variables change such as players, coaches, schedules, weather). 95% confidence intervals for differences in means or proportions.</p></li>
 <li><p>Exclusion of 2020 year when shortened season would affect team statistics.</p></li>
 </ul>
-<p>Software and reproducibility</p>
-<ul>
-<li><p>Python version 3.11.6</p></li>
-<li><p>R version 4.4.3</p></li>
-<li><p>Version control stored on GitHub repository containing all scripts and Docker files</p></li>
-</ul>
-<p>Data licensing</p>
-<ul>
-<li><p>All data are publicacly available via the free MLB Stats API</p></li>
-<li><p>No personal player data or personally identifiable information were used</p></li>
-</ul>
+<p><strong>Software, reproducibility, and data licensing</strong></p>
+<p>All data-retrieval and preprocessing was executed using Python 3.11.6. The exploration and final analysis were written with R 4.4.3 within a lightweight Docker container. Versioned scripts and written reports were saved on a public GitHub repository to ensure transparency.</p>
+<p>Raw data originated from the free, official MLB Stats API. No personal player data or personally identifiable information were used.</p>
 </section>
 <section id="references" class="level2 unnumbered">
 
