Refine study period and outcomes

--- a/report.html
+++ b/report.html
@@ -3130,24 +3130,13 @@ vertical-align: -.125em;
 </section>
 <section id="methods" class="level2">
 <h2 class="anchored" data-anchor-id="methods">Methods</h2>
-<p><strong>Notes</strong></p>
-<p>Observation window</p>
-<ul>
-<li><p>2014-2024</p></li>
-<li><p>Used year of implementation for each rule to determine pre-rule and post-rule windows</p></li>
-<li><p>Regular season games only</p></li>
-<li><p>MLB teams only; No minor leagues</p></li>
-<li><p>2020 including when using within-game metrics, excluded when using season-long metrics</p></li>
-</ul>
-<p>Granularity of data</p>
-<ul>
-<li>Game-level, inning-level, individual plays, and season-long as needed per metric.</li>
-</ul>
-<p>Sources</p>
-<ul>
-<li>MLB Stats API for all data</li>
-</ul>
-<p>Outcomes</p>
+<p><strong>Study Period</strong></p>
+<p>This was a retrospective, observational study of MLB rule changes that were implemented during the 2020-2023 seasons. Only MLB regular-season games were included. Minor league games and postseason matchups were excluded.</p>
+<p>For each studied rule, the year of implementation defined the boundary between pre-rule and post-rule windows. All seasons prior to implementation, through the start of the 2014 regular season, comprised of the pre-rule window. All seasons from implementation and onward, through the end of the 2024 regular season, comprised of the post-rule period.</p>
+<p>The 2020 season was a short season due to the COVID-19 pandemic. Therefore this season was included when analyzing within-game metrics and excluded from season-aggregated metrics.</p>
+<p><strong>Outcomes</strong></p>
+<p>Various metrics tailored to each rule change were investigated to perform a robust analysis. These metrics are described alongside the respective rule change in TABLE X.</p>
+<p>TABLE X</p>
 <ul>
 <li><p>3-batter minimum: Number of pitchers used per game, number of pitching changes in the middle of an inning per game, proportion of games with at least one/two/three mid-inning pitching changes</p></li>
 <li><p>Extra-innings baserunner: Number of extra innings required to complete a tied game at the 9th inning, number of runs scored during extra innings, number of batters needed before first run in extra innings, final inning in marathon games, total runs in marathon games, batters until first score in marathon games (marathons being those in the 95th percentile of game length by innings per season)</p></li>
